# openad-service-moler

./: Dockerfile  README.md  Readme.md  launch.json  openad.cfg  pyproject.toml
helpers/: sample_request.py
helpers/sky/: generation_service.yaml  generation_service_docker.yaml
openad_model_generation_service/: __init__.py  call_generation_services.py  generate_generation_service_defs.py  generation_applications.py  registry.py  service.py
openad_model_generation_service/definitions/services/: generation_service_defintion_generates_MoLeRDefaultGenerator.json  generation_service_defintion_generates_MolGXQM9Generator.json
